<resources>
    <string name="app_name">Colorizer</string>
    <string name="image_cuba">image cuba</string>
    <string name="button">Button</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="reset">Reset</string>
    <string name="next_image">Next Image</string>


</resources>
